--- a/ExpertSchool/Views/Home/Index.cshtml
+++ b/ExpertSchool/Views/Home/Index.cshtml
@@ -10,14 +10,19 @@
                 <img src="~/img/about-img.jpg" class="img-fluid" alt="">
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1">
-                <p class="fst-italic">
+                <p>
+                    Мы - команда специалистов из различных сфер,<br/>
+                    которые встретились на Хакатоне EdTech в июне 2023 года,<br/>
+                    мыслят в формате win/win и стремятся сделать этот мир лучше! 
+                </p>
+                <p>
                     Наша цель – помочь специалистам получить первый коммерческий опыт, 
-                    а бизнесам – реализовать IT-решения за умеренную плату.
+                    а бизнесу – реализовать IT-решения за умеренную плату.
                 </p>
                 <ul>
                     <li><i class="bi bi-check2-circle"></i> Приобретение опыта на реальных проектах <strong>для специалистов без опыта</strong></li>
-                    <li><i class="bi bi-check2-circle"></i> Возможность проявить себя для <strong>менторов</strong></li>
-                    <li><i class="bi bi-check2-circle"></i> доступные <strong>ІТ-решения</strong> для малого и среднего бизнеса</li>
+                    <li><i class="bi bi-check2-circle"></i> Возможность проявить себя как <strong>ментор</strong></li>
+                    <li><i class="bi bi-check2-circle"></i> доступные <strong>ІТ-решения</strong> для малого/среднего бизнеса</li>
                 </ul>
             </div>
         </div>
@@ -84,7 +89,7 @@
     <div class="container">
 
         <div class="section-title">
-            <h2>Проекты наших стажёров</h2>
+            <h2>Проекты</h2>
         </div>
 
         <div class="row">
