--- a/ExpertSchool/Views/Shared/_Layout.cshtml
+++ b/ExpertSchool/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
 
     <title>Стажировка с Expert School</title>
     <meta content="Образовательно-практическую платформа для объединения стажёров, менторов и бизнеса" name="description">
-     <meta content="образование, практика, бизнес, IT-решения, коммерческий опыт, стажировка" name="keywords">
+    <meta content="образование, практика, бизнес, IT-решения, коммерческий опыт, стажировка" name="keywords">
 
     <link href="~/img/expertschool.png" rel="icon">
     <link href="~/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -34,8 +34,8 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a class="nav-link scrollto active" href="#hero">Главная</a></li>
-                    <li><a class="nav-link scrollto" href="#about">Про нас</a></li>
-                    <li><a class="nav-link scrollto" href="#services">Преимущества</a></li>
+                    <li><a class="nav-link scrollto" href="#about">О нас</a></li>
+                    <li><a class="nav-link scrollto" href="#services">Предлагаем</a></li>
                     <li><a class="nav-link scrollto" href="#portfolio">Проекты стажеров</a></li>
                     <li><a class="nav-link scrollto" href="#team">Команда</a></li>
 
@@ -68,17 +68,20 @@
     </header><!-- End #header -->
     <section id="hero">
         <div class="hero-container">
-            <div class="container" style="color:white;">
-                <h2>Добро пожаловать в ExpertSchool!</h2>
+            <div class="container">
                 <div class="row">
                     <div class="col-md-6 offset-md-3">
-                        <p class="text-center lead">Лови возможность:</p>
-                        <ul style="text-align: left;">
-                            <li>приобрести опыт участия на реальных проектах;</li>
-                            <li>работать над интересными проектами и развиваться вместе с нами;</li>
-                            <li>найти решение для твоих бизнес потребностей (IT решения) за умеренную плату</li>
-                        </ul>
-                        <a href="#about" class="btn-get-started scrollto">Далее</a>
+                        <div class="hero-text" style="font-size: 200%;">
+                            <p>Лови возможность:</p>
+                            <ul style="text-align: left;">
+                                <li>Приобрести практический опыт работы на реальных проектах</li>
+                                <li>Работать в команде над интересными проектами</li>
+                                <li>Развиваться и расти вместе с нами</li>
+                                <li>Делиться опытом и приобретать новые знания, навыки</li>
+                                <li>Решать свои бизнес потребности (IT решения) за умеренную плату</li>
+                            </ul>
+                            <a href="#about" class="btn-get-started scrollto">Далее</a>
+                        </div>
                     </div>
                 </div>
             </div>
