--- a/ExpertSchool/Views/Home/Index.cshtml
+++ b/ExpertSchool/Views/Home/Index.cshtml
@@ -45,8 +45,8 @@
                 <div class="icon"><i class="bi bi-person-vcard"></i></div>
                 <h4 class="title"><a href="">Стажёрам</a></h4>
                 <p class="description">
-                    Присоединяйтесь к нашей платформе, чтобы получить возможность работать над интересными проектами, 
-                    получить опыт от опытных менторов, и стать частью сообщества, которое стремится к развитию и успеху. 
+                    Присоединяйтесь к нам, чтобы получить возможность работать над реальными проектами, 
+                    получить первый опыт от менторов, и стать частью сообщества, которое стремится к развитию и успеху. 
                     Мы готовы помочь вам расти и развиваться вместе с нами!
                 </p>
             </div>
@@ -352,7 +352,8 @@
         <div class="section-title">
             <h2>Наши контакты</h2>
             <p>
-                Мы верим, что образование является важной частью жизни любого человека, которое позволяет нам двигаться вперед и становиться лучше. Присоединяйтесь к нашей платформе, чтобы получить возможность работать над интересными проектами и развиваться вместе с нами!
+                Мы верим, что образование является важной частью жизни любого человека, которое позволяет нам двигаться вперед и становиться лучше. 
+                Присоединяйтесь к нам, чтобы получить возможность работать над реальными проектами и развиваться!
             </p>
         </div>
 
