--- a/ExpertSchool/Views/Shared/_Layout.cshtml
+++ b/ExpertSchool/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <title>Стажировка с Expert School</title>
-    <meta content="Образовательно-практическую платформа для объединения стажёров, менторов и бизнеса" name="description">
+    <meta content="Образовательно-практический проект объединения стажёров, менторов и бизнеса" name="description">
     <meta content="образование, практика, бизнес, IT-решения, коммерческий опыт, стажировка" name="keywords">
 
     <link href="~/img/expertschool.png" rel="icon">
@@ -36,7 +36,7 @@
                     <li><a class="nav-link scrollto active" href="#hero">Главная</a></li>
                     <li><a class="nav-link scrollto" href="#about">О нас</a></li>
                     <li><a class="nav-link scrollto" href="#services">Предлагаем</a></li>
-                    <li><a class="nav-link scrollto" href="#portfolio">Проекты стажеров</a></li>
+                    <li><a class="nav-link scrollto" href="#portfolio">Проекты</a></li>
                     <li><a class="nav-link scrollto" href="#team">Команда</a></li>
 
                     <li class="dropdown" hidden style="display:none">
@@ -71,9 +71,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 offset-md-3">
-                        <div class="hero-text" style="font-size: 200%;">
+                        <div class="hero-text">
                             <p>Лови возможность:</p>
-                            <ul style="text-align: left;">
+                            <ul>
                                 <li>Приобрести практический опыт работы на реальных проектах</li>
                                 <li>Работать в команде над интересными проектами</li>
                                 <li>Развиваться и расти вместе с нами</li>
