Changed icon size

--- a/ExpertSchool/Views/Shared/_Layout.cshtml
+++ b/ExpertSchool/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
 
             <div class="logo me-auto">
                 <h1>
-                    <img src="~/img/expertschool.png" class="img-fluid" alt="">
+                    <img src="~/img/expertschool.png" class="img-fluid me-4" alt="">
                     <a href="/">ExpertSchool</a>
                 </h1>
             </div>
