update styles of hero block

--- a/ExpertSchool/Views/Shared/_Layout.cshtml
+++ b/ExpertSchool/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                     <li><a class="nav-link scrollto" href="#about">О нас</a></li>
                     <li><a class="nav-link scrollto" href="#services">Предлагаем</a></li>
                     <li><a class="nav-link scrollto" href="#portfolio">Проекты</a></li>
-                    <li><a class="nav-link scrollto" href="#team">Команда</a></li>
+                    <li><a class="nav-link scrollto" href="#team">Менторы</a></li>
 
                     <li class="dropdown" hidden style="display:none">
                         <a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -70,15 +70,15 @@
         <div class="hero-container">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 offset-md-3">
+                    <div class="col-md-8 offset-md-2">
                         <div class="hero-text">
-                            <p>Лови возможность:</p>
+                            <h3>Лови возможность:</p>
                             <ul>
-                                <li>Приобрести практический опыт работы на реальных проектах</li>
-                                <li>Работать в команде над интересными проектами</li>
+                                <li>Приобрести <strong>практический</strong> опыт работы на реальных проектах</li>
+                                <li>Работать в команде над <strong>реальными</strong> проектами</li>
                                 <li>Развиваться и расти вместе с нами</li>
                                 <li>Делиться опытом и приобретать новые знания, навыки</li>
-                                <li>Решать свои бизнес потребности (IT решения) за умеренную плату</li>
+                                <li>Решать свои <strong>бизнес-потребности</strong> (IT решения) за умеренную плату</li>
                             </ul>
                             <a href="#about" class="btn-get-started scrollto">Далее</a>
                         </div>
