--- a/ExpertSchool/Views/Home/Index.cshtml
+++ b/ExpertSchool/Views/Home/Index.cshtml
@@ -112,7 +112,7 @@
                         <h3><a href="~/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1">App 1</a></h3>
                         <div>
                             <a href="~/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bi bi-plus"></i></a>
-                            <a href="portfolio-details.html" title="Details"><i class="bi bi-link"></i></a>
+                            <a href="https://carsharingapp.norwayeast.cloudapp.azure.com:21002/catalog" target="_blank" title="Details"><i class="bi bi-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -125,7 +125,7 @@
                         <h3><a href="~/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="">Сайт-визитка для спортивного клуба</a></h3>
                         <div>
                             <a href="~/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title=""><i class="bi bi-plus"></i></a>
-                            <a href="portfolio-details.html" title="Подробнее"><i class="bi bi-link"></i></a>
+                            <a href="https://mfk.by" target="_blank" title="Подробнее"><i class="bi bi-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -138,7 +138,7 @@
                         <h3><a href="~/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="">Сайт о продукции компании</a></h3>
                         <div>
                             <a href="~/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title=""><i class="bi bi-plus"></i></a>
-                            <a href="portfolio-details.html" title="Подробнее"><i class="bi bi-link"></i></a>
+                            <a href="https://belnewteh.by" target="_blank" title="Подробнее"><i class="bi bi-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -151,7 +151,7 @@
                         <h3><a href="~/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2">Китайский культурный центр</a></h3>
                         <div>
                             <a href="~/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bi bi-plus"></i></a>
-                            <a href="portfolio-details.html" title="Подробнее"><i class="bi bi-link"></i></a>
+                            <a href="https://bel-huaqiao.com/cn/" target="_blank" title="Подробнее"><i class="bi bi-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -164,7 +164,7 @@
                         <h3><a href="~/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2">Интернет-магазин</a></h3>
                         <div>
                             <a href="~/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bi bi-plus"></i></a>
-                            <a href="portfolio-details.html" title="Подробнее"><i class="bi bi-link"></i></a>
+                            <a href="https://kroplia.by" target="_blank" title="Подробнее"><i class="bi bi-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -177,7 +177,7 @@
                         <h3><a href="~/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3">Сайт чемпионата</a></h3>
                         <div>
                             <a href="~/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bi bi-plus"></i></a>
-                            <a href="portfolio-details.html" title="Подробнее"><i class="bi bi-link"></i></a>
+                            <a href="https://belarusopencup.by" target="_blank" title="Подробнее"><i class="bi bi-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -190,7 +190,7 @@
                         <h3><a href="~/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1">Продажа ворот</a></h3>
                         <div>
                             <a href="~/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bi bi-plus"></i></a>
-                            <a href="portfolio-details.html" title="Подробнее"><i class="bi bi-link"></i></a>
+                            <a href="https://tekarol.by" target="_blank" title="Подробнее"><i class="bi bi-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -203,7 +203,7 @@
                         <h3><a href="~/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3">Архитектурное бюро</a></h3>
                         <div>
                             <a href="~/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bi bi-plus"></i></a>
-                            <a href="portfolio-details.html" title="Подробнее"><i class="bi bi-link"></i></a>
+                            <a href="https://pge.by" target="_blank" title="Подробнее"><i class="bi bi-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -216,7 +216,7 @@
                         <h3><a href="~/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1">Агрегатор клубов</a></h3>
                         <div>
                             <a href="~/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1"><i class="bi bi-plus"></i></a>
-                            <a href="portfolio-details.html" title="Подробнее"><i class="bi bi-link"></i></a>
+                            <a href="https://karateminska.by" target="_blank" title="Подробнее"><i class="bi bi-link"></i></a>
                         </div>
                     </div>
                 </div>
