--- a/ExpertSchool/Views/Shared/_Layout.cshtml
+++ b/ExpertSchool/Views/Shared/_Layout.cshtml
@@ -96,7 +96,7 @@
     <footer id="footer">
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong><span>ExpertSchool</span></strong>. Все права защищены.
+                &copy; <strong><span>ExpertSchool</span></strong>. Зроблена ў Мінску, з клопатам і павагай.
             </div>
         </div>
     </footer><!-- End #footer -->
