--- a/ExpertSchool/wwwroot/css/site.css
+++ b/ExpertSchool/wwwroot/css/site.css
@@ -159,11 +159,11 @@ section {
     transition: all 0.5s;
     z-index: 997;
     transition: all 0.5s;
-    background: #2d6760;
+    background: #455a64;
 }
 
     #header.header-scrolled {
-        background: #1d443f;
+        background: #455a64;
         height: 60px;
     }
 
@@ -1044,7 +1044,7 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-    background: #073839;
+    background: #455a64;
     padding: 30px 0;
     color: #fff;
     font-size: 14px;
