added form submit logic

--- a/ExpertSchool/Views/Home/Index.cshtml
+++ b/ExpertSchool/Views/Home/Index.cshtml
@@ -395,7 +395,7 @@
             </div>
 
             <div class="col-lg-5 col-md-12">
-                <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                <form method="post" role="form" class="php-email-form" onsubmit="SendConfirmationMessage()">
                     <div class="form-group">
                         <input type="text" name="name" class="form-control" id="name" placeholder="Name" required>
                     </div>
@@ -406,14 +406,9 @@
                         <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
                     </div>
                     <div class="form-group mt-3">
-                        <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+                        <textarea class="form-control" name="message" rows="5" id="myMessage" placeholder="Message" required></textarea>
                     </div>
-                    <div class="my-3">
-                        <div class="loading">Loading</div>
-                        <div class="error-message"></div>
-                        <div class="sent-message">Your message has been sent. Thank you!</div>
-                    </div>
-                    <div class="text-center"><button type="submit">Отправить</button></div>
+                    <div class="text-center mt-3"><button type="submit">Отправить</button></div>
                 </form>
             </div>
 
