--- a/ExpertSchool/Views/Home/Index.cshtml
+++ b/ExpertSchool/Views/Home/Index.cshtml
@@ -109,9 +109,9 @@
                 <div class="portfolio-wrap">
                     <img src="~/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h3><a href="~/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1">App 1</a></h3>
+                        <h3><a href="~/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="">Аренда автомобилей</a></h3>
                         <div>
-                            <a href="~/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bi bi-plus"></i></a>
+                            <a href="~/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title=""><i class="bi bi-plus"></i></a>
                             <a href="https://carsharingapp.norwayeast.cloudapp.azure.com:21002/catalog" target="_blank" title="Details"><i class="bi bi-link"></i></a>
                         </div>
                     </div>
@@ -148,9 +148,9 @@
                 <div class="portfolio-wrap">
                     <img src="~/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h3><a href="~/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2">Китайский культурный центр</a></h3>
+                        <h3><a href="~/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="">Китайский культурный центр</a></h3>
                         <div>
-                            <a href="~/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bi bi-plus"></i></a>
+                            <a href="~/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title=""><i class="bi bi-plus"></i></a>
                             <a href="https://bel-huaqiao.com/cn/" target="_blank" title="Подробнее"><i class="bi bi-link"></i></a>
                         </div>
                     </div>
@@ -161,9 +161,9 @@
                 <div class="portfolio-wrap">
                     <img src="~/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h3><a href="~/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2">Интернет-магазин</a></h3>
+                        <h3><a href="~/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="">Интернет-магазин</a></h3>
                         <div>
-                            <a href="~/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bi bi-plus"></i></a>
+                            <a href="~/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title=""><i class="bi bi-plus"></i></a>
                             <a href="https://kroplia.by" target="_blank" title="Подробнее"><i class="bi bi-link"></i></a>
                         </div>
                     </div>
@@ -174,9 +174,9 @@
                 <div class="portfolio-wrap">
                     <img src="~/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h3><a href="~/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3">Сайт чемпионата</a></h3>
+                        <h3><a href="~/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="">Сайт чемпионата</a></h3>
                         <div>
-                            <a href="~/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bi bi-plus"></i></a>
+                            <a href="~/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title=""><i class="bi bi-plus"></i></a>
                             <a href="https://belarusopencup.by" target="_blank" title="Подробнее"><i class="bi bi-link"></i></a>
                         </div>
                     </div>
@@ -187,9 +187,9 @@
                 <div class="portfolio-wrap">
                     <img src="~/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h3><a href="~/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1">Продажа ворот</a></h3>
+                        <h3><a href="~/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="">Продажа ворот</a></h3>
                         <div>
-                            <a href="~/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bi bi-plus"></i></a>
+                            <a href="~/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title=""><i class="bi bi-plus"></i></a>
                             <a href="https://tekarol.by" target="_blank" title="Подробнее"><i class="bi bi-link"></i></a>
                         </div>
                     </div>
@@ -200,9 +200,9 @@
                 <div class="portfolio-wrap">
                     <img src="~/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h3><a href="~/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3">Архитектурное бюро</a></h3>
+                        <h3><a href="~/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="">Архитектурное бюро</a></h3>
                         <div>
-                            <a href="~/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bi bi-plus"></i></a>
+                            <a href="~/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title=""><i class="bi bi-plus"></i></a>
                             <a href="https://pge.by" target="_blank" title="Подробнее"><i class="bi bi-link"></i></a>
                         </div>
                     </div>
@@ -213,9 +213,9 @@
                 <div class="portfolio-wrap">
                     <img src="~/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h3><a href="~/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1">Агрегатор клубов</a></h3>
+                        <h3><a href="~/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="">Агрегатор клубов</a></h3>
                         <div>
-                            <a href="~/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1"><i class="bi bi-plus"></i></a>
+                            <a href="~/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title=""><i class="bi bi-plus"></i></a>
                             <a href="https://karateminska.by" target="_blank" title="Подробнее"><i class="bi bi-link"></i></a>
                         </div>
                     </div>
