--- a/ExpertSchool/Views/Shared/_Layout.cshtml
+++ b/ExpertSchool/Views/Shared/_Layout.cshtml
@@ -71,17 +71,15 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 offset-md-2">
-                        <div class="hero-text">
-                            <h3>Лови возможность:</p>
-                            <ul>
-                                <li>Приобрести <strong>практический</strong> опыт работы на реальных проектах</li>
-                                <li>Работать в команде над <strong>реальными</strong> проектами</li>
-                                <li>Развиваться и расти вместе с нами</li>
-                                <li>Делиться опытом и приобретать новые знания, навыки</li>
-                                <li>Решать свои <strong>бизнес-потребности</strong> (IT решения) за умеренную плату</li>
-                            </ul>
-                            <a href="#about" class="btn-get-started scrollto">Далее</a>
+                        <div class="hero-text d-flex flex-column">
+                            <h1 class="mb-4">Лови возможность</h1>
+                            <a>Развиваться и расти вместе с нами</a>
+                            <a>Работать в команде над <strong>реальными</strong> проектами</a>
+                            <a>Делиться опытом и приобретать новые знания, навыки</a>
+                            <a>Приобрести <strong>практический</strong> опыт работы на реальных проектах</a>
+                            <a>Решать свои <strong>бизнес-потребности</strong> (IT решения) за умеренную плату</a>
                         </div>
+                        <a href="#about" class="btn-get-started mt-4 scrollto">Далее</a>
                     </div>
                 </div>
             </div>
