--- a/ExpertSchool/Views/Shared/_Layout.cshtml
+++ b/ExpertSchool/Views/Shared/_Layout.cshtml
@@ -73,10 +73,10 @@
                     <div class="col-md-8 offset-md-2">
                         <div class="hero-text d-flex flex-column">
                             <h1 class="mb-4">Лови возможность</h1>
-                            <a>Развиваться и расти вместе с нами</a>
+                            <a><strong>Развиваться</strong> и <strong>расти</strong> вместе с нами</a>
                             <a>Работать в команде над <strong>реальными</strong> проектами</a>
-                            <a>Делиться опытом и приобретать новые знания, навыки</a>
-                            <a>Приобрести <strong>практический</strong> опыт работы на реальных проектах</a>
+                            <a><strong>Делиться</strong> опытом и <strong style="font-size: 30px;">приобретать</strong> новые знания, навыки</a>
+                            <a>Приобрести <strong>практический опыт</strong> работы на реальных проектах</a>
                             <a>Решать свои <strong>бизнес-потребности</strong> (IT решения) за умеренную плату</a>
                         </div>
                         <a href="#about" class="btn-get-started mt-4 scrollto">Далее</a>
