--- a/ExpertSchool/Views/Shared/_Layout.cshtml
+++ b/ExpertSchool/Views/Shared/_Layout.cshtml
@@ -75,7 +75,7 @@
                             <h1 class="mb-4">Лови возможность</h1>
                             <a><strong>Развиваться</strong> и <strong>расти</strong> вместе с нами</a>
                             <a>Работать в команде над <strong>реальными</strong> проектами</a>
-                            <a><strong>Делиться</strong> опытом и <strong style="font-size: 30px;">приобретать</strong> новые знания, навыки</a>
+                            <a><strong>Делиться</strong> опытом и <strong>приобретать</strong> новые знания, навыки</a>
                             <a>Приобрести <strong>практический опыт</strong> работы на реальных проектах</a>
                             <a>Решать свои <strong>бизнес-потребности</strong> (IT решения) за умеренную плату</a>
                         </div>
