--- a/ExpertSchool/Views/Home/Index.cshtml
+++ b/ExpertSchool/Views/Home/Index.cshtml
@@ -75,13 +75,16 @@
 <!-- ======= Call To Action Section ======= -->
 <section class="call-to-action">
     <div class="container">
-
         <div class="text-center">
-            <h3>Хочешь Присоединиться к Нашей Команде?</h3>
-            <p>Мы будем рады, если именно Вы присоединитесь к нашей команде профессионалов и стажеров, чтобы вместе развиваться, обмениваться опытом и делать наш миру чуточку лучше. Пожалуйста, перейдите к нашему опросу и заполните его. После завершения, мы свяжемся с Вами в ближайшее время.</p>
-            <a class="cta-btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfIT4XsjYedq2spE_IE7LyN8u7MiOzz3j57ctqZcOEJ_uhYGg/viewform?usp=sf_link">Присоединиться</a>
+            <h3>Присоединяйся!</h3>
+            <p>
+                Будем рады, если именно ты присоединишься к нашей команде профессионалов и стажеров, чтобы вместе развиваться, 
+                обмениваться опытом и делать наш мир чуточку лучше. 
+            </p>
+            <a class="cta-btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfIT4XsjYedq2spE_IE7LyN8u7MiOzz3j57ctqZcOEJ_uhYGg/viewform?usp=sf_link" target="_blank">
+                Присоединиться
+            </a>
         </div>
-
     </div>
 </section><!-- End Call To Action Section -->
 <!-- ======= Our Portfolio Section ======= -->
