--- a/ExpertSchool/Views/Shared/_Layout.cshtml
+++ b/ExpertSchool/Views/Shared/_Layout.cshtml
@@ -73,11 +73,11 @@
                     <div class="col-md-8 offset-md-2">
                         <div class="hero-text d-flex flex-column">
                             <h1 class="mb-4">Лови возможность</h1>
-                            <a><strong style="font-size: 2rem;">Развиваться</strong> и <strong style="font-size: 2rem;">расти</strong> вместе с нами</a>
-                            <a>Работать в команде над <strong style="font-size: 2rem;">реальными</strong> проектами</a>
-                            <a><strong style="font-size: 2rem;">Делиться</strong> опытом и <strong style="font-size: 2rem;">приобретать</strong> новые знания, навыки</a>
-                            <a>Приобрести <strong style="font-size: 2rem;">практический опыт</strong> работы на реальных проектах</a>
-                            <a>Решать свои <strong style="font-size: 2rem;">бизнес-потребности</strong> (IT решения) за умеренную плату</a>
+                            <a><strong style="font-size: 4vmin;">Развиваться</strong> и <strong style="font-size: 4vmin;">расти</strong> вместе с нами</a>
+                            <a>Работать в команде над <strong style="font-size: 4vmin;">реальными</strong> проектами</a>
+                            <a><strong style="font-size: 4vmin;">Делиться</strong> опытом и <strong style="font-size: 4vmin;">приобретать</strong> новые знания, навыки</a>
+                            <a>Приобрести <strong style="font-size: 4vmin;">практический опыт</strong> работы на реальных проектах</a>
+                            <a>Решать свои <strong style="font-size: 4vmin;">бизнес-потребности</strong> (IT решения) за умеренную плату</a>
                         </div>
                         <a href="#about" class="btn-get-started mt-4 scrollto">Далее</a>
                     </div>
