update font-size in the first hero (1)

--- a/ExpertSchool/Views/Shared/_Layout.cshtml
+++ b/ExpertSchool/Views/Shared/_Layout.cshtml
@@ -73,11 +73,11 @@
                     <div class="col-md-8 offset-md-2">
                         <div class="hero-text d-flex flex-column">
                             <h1 class="mb-4">Лови возможность</h1>
-                            <a><strong>Развиваться</strong> и <strong>расти</strong> вместе с нами</a>
-                            <a>Работать в команде над <strong>реальными</strong> проектами</a>
-                            <a><strong>Делиться</strong> опытом и <strong>приобретать</strong> новые знания, навыки</a>
-                            <a>Приобрести <strong>практический опыт</strong> работы на реальных проектах</a>
-                            <a>Решать свои <strong>бизнес-потребности</strong> (IT решения) за умеренную плату</a>
+                            <p class="line"><strong>Развиваться</strong> и <strong>расти</strong> вместе с нами</p>
+                            <p class="line">Работать в команде над <strong>реальными</strong> проектами</p>
+                            <p class="line"><strong>Делиться</strong> опытом и <strong>приобретать</strong> новые знания, навыки</p>
+                            <p class="line">Приобрести <strong>практический опыт</strong> работы на реальных проектах</p>
+                            <p class="line">Решать свои <strong>бизнес-потребности</strong> (IT решения) за умеренную плату</p>
                         </div>
                         <a href="#about" class="btn-get-started mt-4 scrollto">Далее</a>
                     </div>
