--- a/ExpertSchool/wwwroot/css/site.css
+++ b/ExpertSchool/wwwroot/css/site.css
@@ -464,8 +464,22 @@ section {
     }
 
     #hero .hero-text {
-        font-size: 20px;
+        font-size: 4vmin;
         color: white;
+    }
+
+    @media (min-width: 1024px) {
+        #hero .hero-text {
+            font-size: 22px;
+        }
+    }
+
+    #hero .hero-text .line {
+        margin: 0 0 .25em;
+    }
+
+    #hero .hero-text .line strong {
+        font-size: 120%;;
     }
 
     #hero .hero-text ul {
